fix 'Anupam' alignment on hero section

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
     margin: 0; 
     position: relative; 
     bottom: 0;
-    top: 1.92rem;
+    top: 1.88rem;
     line-height: 70px;
 }
 
